2000-03-31  Thomas de Lellis  <tdel@wrs.com>

	* srec.c : Set CHUNK size to 16 bytes to prevent download failures
	on some targets.
	* ihex.c : Ditto.

Wed Mar 30 15:28:00 2000  Donald Lindsay  <dlindsay@cygnus.com>

	* elf32-m32r.c (m32r_elf_generic_reloc): new function.  All
	HOWTO references to bfd_elf_generic_reloc, that have
	partial_inplace == true, now use the new function.  The function
	is based on the recent rewrite of m32r_elf_lo16_reloc(), and
	extends its fixes to the R_M32R_{16,24,32} relocs.
	The new logic in m32r_elf_lo16_reloc() has been removed, and
	it instead calls the new routine to obtain that functionality.

2000-03-27  Alan Modra  <alan@linuxcare.com>

	* elf32-avr.c (elf32_avr_gc_mark_hook, elf32_avr_gc_sweep_hook,
	elf32_avr_check_relocs, avr_final_link_relocate,
	elf32_avr_relocate_section, bfd_elf_avr_final_write_processing,
	elf32_avr_object_p): Add prototypes.
	(elf32_avr_gc_mark_hook): Add default for h->root.type.
	(bfd_elf_avr_final_write_processing): Make static.

2000-03-27  Denis Chertykov  <denisc@overta.ru>

	* cpu-avr.c: New file.  BFD support routines for AVR architecture.
	* archures.c (bfd_architecture): Add AVR architecture.
	(bfd_archures_list): Add reference to AVR architecture info.
	* elf.c (prep_headers): Handle bfd_arch_avr.
	* reloc.c: Add various AVR relocation enums.
	* targets.c (bfd_elf32_avr_vec): Declare and add to target vector
	list.
	* Makefile.am: Add support for AVR elf.
	* configure.in: Likewise.
	* config.bfd: Likewise.
	* Makefile.in: Regenerate.
	* configure: This too.
	* bfd-in2.h: And this.
	* libbfd.h: And this.

2000-03-24  H.J. Lu  <hjl@gnu.org>

	* elf64-alpha.c (elf64_alpha_merge_ind_symbols): Add prototype.
	(elf64_alpha_find_reloc_at_ofs): Likewise.

2000-03-17  Alan Modra  <alan@linuxcare.com.au>

	* reloc.c (bfd_check_overflow): In case complain_overflow_bitfield,
	flag an overflow if the bitfield is outside -2**n to 2**n-1.  The
	allowable range used to be -2**(n-1) to 2**n-1.